--- a/index.html
+++ b/index.html
@@ -51,7 +51,29 @@
               </div>
           </section>
     </header>
+      <main>
+     <div class="container">
 
+    <div class="row shadow-sm mt-5 d-flex justify-content-center">
+             <div class="col-6 col-sm-6 col-md-2 col-lg-2 m-2 p-2 ">
+   <img src="logos/Alibaba.svg" alt="">
+</div>
+<div class="col-6 col-sm-6 col-md-2 col-lg-2 m-2 p-2">
+    <img src="logos/Amazon.svg" alt="">
+</div>
+<div class="col-6 col-sm-6 col-md-2 col-lg-2 m-2 p-2">
+    <img src="logos/Daraz.pk Logo.svg" alt="">
+</div>
+<div class="col-6 col-sm-6 col-md-2 col-lg-2 m-2 p-2">
+    <img src="logos/Ebay.svg" alt="">
+</div>
+<div class="col-6 col-sm-6 col-md-2 col-lg-2 m-2 p-2">
+    <img src="logos/Rakuten.svg" alt="">
+</div>
+
+</div>
+     </div>
+      </main>
 
 
 
