--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <main>
      <div class="container">
 
-    <div class="row shadow-sm mt-5 d-flex justify-content-center">
+    <div class="row ms-5 shadow-sm mt-5 d-flex justify-content-center">
              <div class="col-6 col-sm-6 col-md-2 col-lg-2 m-2 p-2 ">
    <img src="logos/Alibaba.svg" alt="">
 </div>
@@ -74,8 +74,171 @@
 </div>
      </div>
       </main>
+<menu>
+    <div class="container">
+        <h3 class="d-flex justify-content-center fw-bolder mt-5 pt-5">Popular Collection</h3>
+        <div class="row me-4">
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/tripod.png" alt="">
+<h2 class="mt-3">Flex Tripod</h2>
+<h3>$324</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/mic.png" alt="">
+<h2 class="mt-3">microphone</h2>
+<h3>$110</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/airpod.png" alt="">
+<h2 class="mt-3">Airbuds</h2>
+<h3>$100</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/drone.png" alt="">
+<h2 class="mt-3">Drone</h2>
+<h3>$324</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/lights.png" alt="">
+<h2 class="mt-3">Light setup</h2>
+<h3>$1200</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/setup.png" alt="">
+<h2 class="mt-3">Photoshoot set</h2>
+<h3>$820</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/camera.png" alt="">
+<h2 class="mt-3">Vlogging Camera</h2>
+<h3>$1800</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/single-light.png" alt="">
+<h2 class="mt-3">Green Screen</h2>
+<h3>$25.50</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+            <div class="col-12 col-sm-6 col-md-4 col-lg-4 mt-3">
+<img class="img-fluid" src="images/action.png" alt="">
+<h2 class="mt-3">Action Camera</h2>
+<h3>$350</h3>
+<span class="text-warning">
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="fas fa-star"></i>
+<i class="text-dark fas fa-star"></i>
+</span>
+<span>4.5</span>
+<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae, quae.</p>
+        </div>
+    </div>
 
 
+    <section>
+        <div class="container m-0 p-0">
+            <div class="row me-4 mt-5 pt-5">
+                <div class="col-12 col-sm-5 col-md-5 col-lg-5 ">
+                    <img class="img-fluid" src="images/gear.png" alt="">
+                </div>
+                <div class="col-12 col-sm-7 col-col-md-7 col-lg-7 d-flex align-items-center">
+                    <span>
+                    <h2 class="fw-bolder">Featured products at one place</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facere in, officiis similique dolor impedit cumque animi illo ipsum rerum quo beatae eos accusantium enim. Fugit ad deleniti quam laborum dolore !</p>
+                    <button type="button" class="btn btn-warning rounded-pill">JOIN NOW <i class="ps-2 fas fa-arrow-right"></i></button>
+                </span>
+                </div>
+            </div>
+        </div>
+    </section>
+</menu>
+<footer class="mt-5 pt-5">
+    <div class="bg-info d-flex justify-content-center mt-3 pt-3 pb-3 mb-3">
+        <span>
+    <h4>PHOTOSHOOTS PRODUUCT</h4>
+    <p class="ps-3">Copyright © 2020 influencer products</p>
+    <p class="ms-5 ps-4">All rights reserved</p>
+    <span class="ms-5 ps-2">
+    <i class="ms-3 fab fa-instagram"></i>
+    <i class="ms-3 fab fa-chrome"></i>
+    <i class="ms-3 fab fa-twitter"></i>
+    <i class="ms-3 fab fa-youtube"></i>
+</span>
+</span>
+</div>
+</footer>
 
     <!-- js bootstrap  -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
